--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,12 @@ commands =
     poetry run coverage html
     open ./htmlcov/index.html
 
+[testenv:no_external]
+commands =
+    poetry run pytest --doctest-modules singer_sdk
+    poetry run pytest tests/core
+    poetry run pytest tests/cookiecutters
+
 [testenv:lint]
 commands =
     poetry run black --check --diff singer_sdk/ tests/ samples/
