--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ whitelist_externals = poetry
 commands_pre =
     poetry install --no-root
 commands =
-    poetry run coverage run -m pytest -x -v
+    poetry run coverage run -m pytest -x -v {posargs}
     poetry run coverage report --show-missing
     poetry run codecov -e TOXENV
 
@@ -32,12 +32,6 @@ commands_pre =
 commands =
     poetry run coverage html
     open ./htmlcov/index.html
-
-[testenv:no_external]
-commands =
-    poetry run pytest --doctest-modules singer_sdk
-    poetry run pytest tests/core
-    poetry run pytest tests/cookiecutters
 
 [testenv:lint]
 commands =
