--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,17 +9,18 @@ on:
 
 jobs:
   tests:
-    name: Test on ${{ matrix.python-version }} (${{ matrix.tox-env }}) / ${{ matrix.os }}
+    name: Test on ${{ matrix.python-version }} (${{ matrix.tox-env }}${{ matrix.external && ', external' || '' }}) / ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     continue-on-error: false
     strategy:
       fail-fast: false
       matrix:
         include:
-        - { tox-env: no_external, python-version: "3.7", os: "ubuntu-latest" }
-        - { tox-env: no_external, python-version: "3.8", os: "ubuntu-latest" }
-        - { tox-env: no_external, python-version: "3.9", os: "ubuntu-latest" }
-        - { tox-env: no_external, python-version: "3.10", os: "ubuntu-latest" }
+        - { tox-env: py, python-version: "3.7", os: "ubuntu-latest" }
+        - { tox-env: py, python-version: "3.8", os: "ubuntu-latest" }
+        - { tox-env: py, python-version: "3.9", os: "ubuntu-latest" }
+        - { tox-env: py, python-version: "3.10", os: "ubuntu-latest" }
+        - { tox-env: py, python-version: "3.10", os: "ubuntu-latest", external: true }
         - { tox-env: lint, python-version: "3.8", os: "ubuntu-latest" }
 
     steps:
@@ -54,4 +55,4 @@ jobs:
 
     - name: Run tox
       run: |
-        poetry run tox -e ${{ matrix.tox-env }}
+        poetry run tox -e ${{ matrix.tox-env }} -- ${{ matrix.external && ' -m "external"' || '' }}
