test: Combine coverage

--- a/tox.ini
+++ b/tox.ini
@@ -15,8 +15,6 @@ commands_pre =
     poetry install --no-root
 commands =
     poetry run coverage run -m pytest -x -v {posargs}
-    poetry run coverage report --show-missing
-    poetry run codecov -e TOXENV
 
 [testenv:test]
 # Use default py interpreter
@@ -39,6 +37,15 @@ commands =
     poetry run isort --check singer_sdk tests samples
     poetry run flake8 singer_sdk tests samples
     poetry run mypy singer_sdk --exclude='tests'
+
+[testenv:combine_coverage]
+commands =
+    poetry run coverage combine
+    poetry run coverage report --show-missing
+
+[testenv:combine_xml]
+commands =
+    poetry run coverage xml
 
 [flake8]
 ignore = W503, C901, ANN101
