--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,3 +56,49 @@ jobs:
     - name: Run tox
       run: |
         poetry run tox -e ${{ matrix.tox-env }} -- ${{ matrix.external && ' -m "external"' || '' }}
+
+    - name: Upload coverage data
+      if: always() && (matrix.tox-env == 'py')
+      uses: actions/upload-artifact@v3.1.0
+      with:
+        name: coverage-data
+        path: ".coverage.*"
+
+  coverage:
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+    - name: Check out the repository
+      uses: actions/checkout@v3.0.2
+
+    - name: Set up Python
+      uses: actions/setup-python@v3.1.2
+      with:
+        python-version: "3.10"
+
+    - name: Upgrade pip
+      run: |
+        pip install --constraint=.github/workflows/constraints.txt pip
+        pip --version
+
+    - name: Install Poetry
+      run: |
+        pipx install --pip-args=--constraint=.github/workflows/constraints.txt poetry
+        poetry --version
+
+    - name: Download coverage data
+      uses: actions/download-artifact@v3.0.0
+      with:
+        name: coverage-data
+
+    - name: Combine coverage data and display human readable report
+      run: |
+        tox -e combine_coverage
+
+    - name: Create coverage report
+      run: |
+        tox -e coverage_xml
+
+    # TODO: requires setup in codecov.io. Doesn't need a token :)
+    # - name: Upload coverage report
+    #   uses: codecov/codecov-action@v3.1.0
