test: Add --parallel flag for coverage

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ whitelist_externals = poetry
 commands_pre =
     poetry install --no-root
 commands =
-    poetry run coverage run -m pytest -x -v {posargs}
+    poetry run coverage run --parallel -m pytest -x -v {posargs}
 
 [testenv:test]
 # Use default py interpreter
