--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -93,11 +93,11 @@ jobs:
 
     - name: Combine coverage data and display human readable report
       run: |
-        poetry tox -e combine_coverage
+        poetry run tox -e combine_coverage
 
     - name: Create coverage report
       run: |
-        poetry tox -e coverage_xml
+        poetry run tox -e coverage_xml
 
     # TODO: requires setup in codecov.io. Doesn't need a token :)
     # - name: Upload coverage report
