--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,25 +71,31 @@ jobs:
     - name: Check out the repository
       uses: actions/checkout@v3.0.2
 
+    - name: Install Poetry
+      run: |
+        pipx install --pip-args=--constraint=.github/workflows/constraints.txt poetry
+        poetry --version
+
     - name: Set up Python
       uses: actions/setup-python@v3.1.2
       with:
-        python-version: "3.10"
+        python-version: '3.10'
+        cache: 'poetry'
 
     - name: Upgrade pip
       run: |
         pip install --constraint=.github/workflows/constraints.txt pip
         pip --version
 
-    - name: Install Poetry
-      run: |
-        pipx install --pip-args=--constraint=.github/workflows/constraints.txt poetry
-        poetry --version
-
     - name: Download coverage data
       uses: actions/download-artifact@v3.0.0
       with:
         name: coverage-data
+
+    - name: Install Dependencies
+      run: |
+        poetry env use "3.10"
+        poetry install
 
     - name: Combine coverage data and display human readable report
       run: |
