Fix tox env name

--- a/tox.ini
+++ b/tox.ini
@@ -43,7 +43,7 @@ commands =
     poetry run coverage combine
     poetry run coverage report --show-missing
 
-[testenv:combine_xml]
+[testenv:coverage_xml]
 commands =
     poetry run coverage xml
 
