--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,10 @@ commands =
 [testenv:test]
 # Use default py interpreter
 
+[testenv:doctest]
+commands =
+    poetry run pytest --doctest-modules {posargs:singer_sdk}
+
 [testenv:htmlcov]
 # Launch local web browser with previously-captured pytest coverage results
 whitelist_externals =
