Add dependabot for GitHub Actions

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,5 +6,11 @@ updates:
       interval: daily
       time: "12:00"
       timezone: "UTC"
-    reviewers: []
-    labels: []
+    reviewers: [meltano-engineering]
+    labels: [deps]
+  - package-ecosystem: github-actions
+    directory: "/"
+    schedule:
+      interval: weekly
+    reviewers: [meltano-engineering]
+    labels: [deps]
