--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,9 @@ jobs:
         - { tox-env: py, python-version: "3.8", os: "ubuntu-latest" }
         - { tox-env: py, python-version: "3.9", os: "ubuntu-latest" }
         - { tox-env: py, python-version: "3.10", os: "ubuntu-latest" }
-        - { tox-env: py, python-version: "3.10", os: "ubuntu-latest", external: true }
+        #TODO: resolve by mapping CI vars to creds: 
+        # https://github.com/meltano/sdk/issues/683
+        # - { tox-env: py, python-version: "3.10", os: "ubuntu-latest", external: true }
         - { tox-env: doctest, python-version: "3.10", os: "ubuntu-latest" }
         - { tox-env: lint, python-version: "3.8", os: "ubuntu-latest" }
 
