--- a/tox.ini
+++ b/tox.ini
@@ -14,12 +14,14 @@ whitelist_externals = poetry
 commands_pre =
     poetry install --no-root
 commands =
-    poetry run coverage run -m pytest -x -v
-    poetry run coverage report --show-missing
-    poetry run codecov -e TOXENV
+    poetry run coverage run --parallel -m pytest -x -v {posargs}
 
 [testenv:test]
 # Use default py interpreter
+
+[testenv:doctest]
+commands =
+    poetry run pytest --doctest-modules {posargs:singer_sdk}
 
 [testenv:htmlcov]
 # Launch local web browser with previously-captured pytest coverage results
@@ -39,6 +41,15 @@ commands =
     poetry run isort --check singer_sdk tests samples
     poetry run flake8 singer_sdk tests samples
     poetry run mypy singer_sdk --exclude='tests'
+
+[testenv:combine_coverage]
+commands =
+    poetry run coverage combine
+    poetry run coverage report --show-missing
+
+[testenv:coverage_xml]
+commands =
+    poetry run coverage xml
 
 [flake8]
 ignore = W503, C901, ANN101
@@ -71,3 +82,4 @@ exclude_lines =
     raise NotImplementedError
     if __name__ == .__main__.:
     class .*\bProtocol\):
+fail_under = 85
