--- a/.github/semantic.yml
+++ b/.github/semantic.yml
@@ -3,6 +3,9 @@
 # Validate the PR title, and ignore all commit messages
 titleOnly: true
 
+# Provides a custom URL for the "Details" link, which appears next to the success/failure message from the app:
+targetUrl: https://github.com/meltano/sdk/blob/main/CONTRIBUTING.md#semantic-pull-requests
+
 # The values allowed for the "type" part of the PR title/commit message.
 # e.g. for a PR title/commit message of "feat: add some stuff", the type would be "feat"
 types:
