--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,5 +1,14 @@
 version: 2
 updates:
+  - package-ecosystem: "pip"
+    directory: "/"
+    schedule:
+      interval: daily
+      time: "12:00"
+      timezone: "UTC"
+    reviewers: [meltano-engineering]
+    labels: [deps]
+    versioning-strategy: "increase-if-necessary"
   - package-ecosystem: pip
     directory: "/.github/workflows"
     schedule:
