--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
       interval: daily
       time: "12:00"
       timezone: "UTC"
-    reviewers: [meltano-engineering]
+    reviewers: [meltano/engineering]
     labels: [deps]
     versioning-strategy: "increase-if-necessary"
   - package-ecosystem: pip
@@ -15,11 +15,11 @@ updates:
       interval: daily
       time: "12:00"
       timezone: "UTC"
-    reviewers: [meltano-engineering]
+    reviewers: [meltano/engineering]
     labels: [deps]
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
       interval: weekly
-    reviewers: [meltano-engineering]
+    reviewers: [meltano/engineering]
     labels: [deps]
