chore: Add dependabot checks for Poetry dependencies (#692)
* chore: Add dependabot for Poetry dependencies

* chore: Fix team reviewer assignment for dependabot updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,16 +1,25 @@
 version: 2
 updates:
+  - package-ecosystem: "pip"
+    directory: "/"
+    schedule:
+      interval: daily
+      time: "12:00"
+      timezone: "UTC"
+    reviewers: [meltano/engineering]
+    labels: [deps]
+    versioning-strategy: "increase-if-necessary"
   - package-ecosystem: pip
     directory: "/.github/workflows"
     schedule:
       interval: daily
       time: "12:00"
       timezone: "UTC"
-    reviewers: [meltano-engineering]
+    reviewers: [meltano/engineering]
     labels: [deps]
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
       interval: weekly
-    reviewers: [meltano-engineering]
+    reviewers: [meltano/engineering]
     labels: [deps]
