chore: Add deps and deps-dev semantic PR scopes

--- a/.github/semantic.yml
+++ b/.github/semantic.yml
@@ -29,3 +29,5 @@ scopes:
   - targets    # target SDK only
   - mappers    # mappers only
   - templates  # cookiecutters
+  - deps       # production dependencies
+  - deps-dev   # development depencencies (testing, linting, etc.)
