--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ isort = "^5.9.3"
 pyupgrade = "^2.34.0"
 requests-mock = "^1.9.3"
 sqlalchemy2-stubs = {version = "^0.0.2a23", allow-prereleases = true}
+types-python-dateutil = "^2.8.17"
 types-requests = "^2.27.30"
 coverage = {extras = ["toml"], version = "^6.4"}
 
