Update types to make flake8 happy

--- a/tox.ini
+++ b/tox.ini
@@ -66,6 +66,7 @@ per-file-ignores =
     singer_sdk/helpers/_classproperty.py:D105
 max-complexity = 10
 docstring-convention = google
+allow-star-arg-any = true
 
 [coverage:run]
 source = singer_sdk
