feat: Implement paginators

--- a/tox.ini
+++ b/tox.ini
@@ -57,7 +57,7 @@ max-line-length = 88
 exclude = cookiecutter
 per-file-ignores =
     # Don't require docstrings or type annotations in tests
-    tests/*:D100,D102,D103,DAR,ANN
+    tests/*:D100,D102,D103,D202,DAR,ANN
     # Don't require docstrings conventions or type annotations in SDK samples
     samples/*:ANN,DAR
     # Don't require docstrings conventions or type annotations in private modules
