--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,34 +1,67 @@
+ci:
+  autofix_prs: false
+  autoupdate_schedule: weekly
+  autoupdate_commit_msg: 'chore: pre-commit autoupdate'
+
 repos:
-  - repo: local
-    hooks:
-      - id: black
-        name: black
-        entry: poetry run black
-        language: system
-        types: [python]
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.2.0
+  hooks:
+  - id: check-json
+  - id: check-toml
+    exclude: |
+        (?x)^(
+            cookiecutter/.*/pyproject.toml
+        )$
+  - id: check-yaml
+    exclude: |
+        (?x)^(
+            cookiecutter/.*/meltano.yml
+        )$
+  - id: end-of-file-fixer
+    exclude: (cookiecutter/.*|docs/.*|samples/.*\.json)
+  - id: trailing-whitespace
+    exclude: |
+        (?x)^(
+            singer_sdk/helpers/_simpleeval.py|
+            tests/core/test_simpleeval.py
+        )$
 
-      - id: isort
-        name: isort
-        entry: poetry run isort
-        language: system
-        types: [python]
+- repo: https://github.com/psf/black
+  rev: 22.3.0
+  hooks:
+  - id: black
+    language_version: python3.10
+    exclude: |
+        (?x)^(
+            cookiecutter/.*|
+            singer_sdk/helpers/_simpleeval.py|
+            tests/core/test_simpleeval.py
+        )$
 
-      - id: flake8
-        name: flake8
-        entry: poetry run flake8
-        language: system
-        types: [python]
-        files: 'singer_sdk/.*'
+- repo: https://github.com/pycqa/isort
+  rev: 5.10.1
+  hooks:
+  - id: isort
+    exclude: (cookiecutter/.*|singer_sdk/helpers/_simpleeval/.*)
 
-      - id: mypy
-        name: mypy
-        entry: poetry run mypy
-        language: system
-        types: [python]
-        exclude: tests/.*
+- repo: https://github.com/pycqa/flake8
+  rev: 4.0.1
+  hooks:
+  - id: flake8
+    additional_dependencies:
+    - darglint==1.8.1
+    - flake8-annotations==2.9.0
+    - flake8-docstrings==1.6.0
+    files: 'singer_sdk/.*'
 
-      - id: pyupgrade
-        name: pyupgrade
-        entry: poetry run pyupgrade --py37-plus
-        language: system
-        types: [python]
+- repo: https://github.com/asottile/pyupgrade
+  rev: v2.32.1
+  hooks:
+  - id: pyupgrade
+    args: [--py37-plus]
+    exclude: |
+        (?x)^(
+            singer_sdk/helpers/_simpleeval.py|
+            tests/core/test_simpleeval.py
+        )$
