Full coverage for new code

--- a/tox.ini
+++ b/tox.ini
@@ -86,4 +86,5 @@ exclude_lines =
     raise NotImplementedError
     if __name__ == .__main__.:
     class .*\bProtocol\):
+    @(abc\.)?abstractmethod
 fail_under = 85
