docs: Update contributing docs

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = test, lint  # By default, use current python for pytest and linting
+envlist = test, combine_coverage, coverage_artifact, lint, docs, pre-commit # By default, use current python for pytest and linting
 passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_* SAMPLE_*
 skipsdist=True
 isolated_build = true
@@ -45,14 +45,27 @@ commands =
     poetry run isort --check singer_sdk tests samples
     poetry run flake8 singer_sdk tests samples
 
+[testenv:pre-commit]
+whitelist_externals = pre-commit
+commands_pre =
+    pre-commit install
+commands =
+    pre-commit run --all
+
+[testenv:docs]
+commands_pre =
+    poetry install --no-root -E docs
+commands =
+    poetry run sphinx-build docs build -W
+
 [testenv:combine_coverage]
 commands =
     poetry run coverage combine
     poetry run coverage report --show-missing
 
-[testenv:coverage_xml]
+[testenv:coverage_artifact]
 commands =
-    poetry run coverage xml
+    poetry run coverage {posargs:xml}
 
 [flake8]
 ignore = W503, C901, ANN101
