--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -151,7 +151,7 @@ jobs:
 
     - name: Create coverage report
       run: |
-        poetry run tox -e coverage_xml
+        poetry run tox -e coverage_artifact -- xml
 
     - name: Upload coverage report
       uses: codecov/codecov-action@v3.1.0
