--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,17 @@ markers = [
     "external: Tests relying on external resources",
 ]
 
+[tool.commitizen]
+name = "cz_conventional_commits"
+version = "0.5.0"
+tag_format = "v$major.$minor.$patch$prerelease"
+version_files = [
+    "docs/conf.py",
+    "pyproject.toml:^version =",
+    "cookiecutter/tap-template/{{cookiecutter.tap_id}}/pyproject.toml:singer-sdk",
+    "cookiecutter/target-template/{{cookiecutter.target_id}}/pyproject.toml:singer-sdk",
+]
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
