ci: ensure changelog update is run when bump is not a prerelease

--- a/.github/workflows/version_bump.yml
+++ b/.github/workflows/version_bump.yml
@@ -63,7 +63,7 @@ jobs:
         pipx install changelog-cli
 
     - name: Prepare Changelog
-      if: always() && (github.event.inputs.prerelease != 'none')
+      if: always() && (github.event.inputs.prerelease == 'none')
       run: |
         bump_lowercase=$(echo "${{ github.event.inputs.bump }}" | tr '[:upper:]' '[:lower:]')
         changelog release --$bump_lowercase --yes
