ci: Fix version check in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         version=$(poetry version | awk '{print $2}')
         tag=$(echo "${{ github.ref }}" | awk '{split($0,p,"/"); print p[3]}')
-        if [ $version != $tag ]; then echo "Release tag and package version do not match!"; exit 1; fi;
+        if [ $version != "v$tag" ]; then echo "Release tag and package version do not match!"; exit 1; fi;
 
     - name: Build
       run: poetry build
