--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,20 +8,25 @@ on:
   workflow_dispatch:
     inputs: {}
 
+env:
+  FORCE_COLOR: "1"
+
 jobs:
   tests:
-    name: Test on ${{ matrix.python-version }} (${{ matrix.tox-env }}) / ${{ matrix.os }}
+    name: Test on ${{ matrix.python-version }} (${{ matrix.session }}) / ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    env:
+      NOXSESSION: ${{ matrix.session }}
     strategy:
       fail-fast: false
       matrix:
         include:
-        - { tox-env: py, python-version: "3.7", os: "ubuntu-latest" }
-        - { tox-env: py, python-version: "3.8", os: "ubuntu-latest" }
-        - { tox-env: py, python-version: "3.9", os: "ubuntu-latest" }
-        - { tox-env: py, python-version: "3.10", os: "ubuntu-latest" }
-        - { tox-env: doctest, python-version: "3.10", os: "ubuntu-latest" }
-        - { tox-env: mypy, python-version: "3.8", os: "ubuntu-latest" }
+        - { session: tests,   python-version: "3.7",  os: "ubuntu-latest" }
+        - { session: tests,   python-version: "3.8",  os: "ubuntu-latest" }
+        - { session: tests,   python-version: "3.9",  os: "ubuntu-latest" }
+        - { session: tests,   python-version: "3.10", os: "ubuntu-latest" }
+        - { session: doctest, python-version: "3.10", os: "ubuntu-latest" }
+        - { session: mypy,    python-version: "3.8",  os: "ubuntu-latest" }
 
     steps:
     - name: Check out the repository
@@ -39,7 +44,8 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         architecture: x64
-        cache: 'poetry'
+        cache: 'pip'
+        cache-dependency-path: 'poetry.lock'
 
     - name: Upgrade pip
       env:
@@ -48,17 +54,20 @@ jobs:
         pip install pip
         pip --version
 
-    - name: Install Dependencies
+    - name: Install Nox
+      env:
+        PIP_CONSTRAINT: .github/workflows/constraints.txt
       run: |
-        poetry env use "${{ matrix.python-version }}"
-        poetry install
+        pipx install --pip-args=--constraint=.github/workflows/constraints.txt nox
+        pipx inject --pip-args=--constraint=.github/workflows/constraints.txt nox nox-poetry
+        nox --version
 
-    - name: Run tox
+    - name: Run Nox
       run: |
-        poetry run tox -e ${{ matrix.tox-env }} --${{ matrix.doctest && ' --doctest-modules singer_sdk' }}
+        nox --python=${{ matrix.python-version }}
 
     - name: Upload coverage data
-      if: always() && (matrix.tox-env == 'py')
+      if: always() && (matrix.session == 'tests')
       uses: actions/upload-artifact@v3.1.0
       with:
         name: coverage-data
@@ -93,7 +102,8 @@ jobs:
       with:
         python-version: '3.10'
         architecture: x64
-        cache: 'poetry'
+        cache: 'pip'
+        cache-dependency-path: 'poetry.lock'
 
     - name: Upgrade pip
       env:
@@ -102,14 +112,17 @@ jobs:
         pip install pip
         pip --version
 
-    - name: Install Dependencies
+    - name: Install Nox
+      env:
+        PIP_CONSTRAINT: .github/workflows/constraints.txt
       run: |
-        poetry env use "3.10"
-        poetry install
+        pipx install --pip-args=--constraint=.github/workflows/constraints.txt nox
+        pipx inject --pip-args=--constraint=.github/workflows/constraints.txt nox nox-poetry
+        nox --version
 
-    - name: Run tox
+    - name: Run Nox
       run: |
-        poetry run tox -e py -- -m "external"
+        nox -s tests -p 3.10 -- -m "external"
 
   coverage:
     name: Coverage
@@ -128,7 +141,8 @@ jobs:
       uses: actions/setup-python@v4.0.0
       with:
         python-version: '3.10'
-        cache: 'poetry'
+        cache: 'pip'
+        cache-dependency-path: 'poetry.lock'
 
     - name: Upgrade pip
       run: |
@@ -140,18 +154,21 @@ jobs:
       with:
         name: coverage-data
 
-    - name: Install Dependencies
+    - name: Install Nox
+      env:
+        PIP_CONSTRAINT: .github/workflows/constraints.txt
       run: |
-        poetry env use "3.10"
-        poetry install
+        pipx install --pip-args=--constraint=.github/workflows/constraints.txt nox
+        pipx inject --pip-args=--constraint=.github/workflows/constraints.txt nox nox-poetry
+        nox --version
 
     - name: Combine coverage data and display human readable report
       run: |
-        poetry run tox -e combine_coverage
+        nox --session=coverage
 
     - name: Create coverage report
       run: |
-        poetry run tox -e coverage_artifact -- xml
+        nox --session=coverage -- xml
 
     - name: Upload coverage report
       uses: codecov/codecov-action@v3.1.0
