--- a/.github/workflows/version_bump.yml
+++ b/.github/workflows/version_bump.yml
@@ -88,3 +88,4 @@ jobs:
         base: main
         labels: release
         assignees: "${{ github.actor }}"
+        token: ${{ secrets.MELTYBOT_GITHUB_AUTH_TOKEN }}
