--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,14 @@ jobs:
         - { session: tests,   python-version: "3.8",  os: "ubuntu-latest" }
         - { session: tests,   python-version: "3.9",  os: "ubuntu-latest" }
         - { session: tests,   python-version: "3.10", os: "ubuntu-latest" }
+        - { session: tests,   python-version: "3.7",  os: "macos-latest" }
+        - { session: tests,   python-version: "3.8",  os: "macos-latest" }
+        - { session: tests,   python-version: "3.9",  os: "macos-latest" }
+        - { session: tests,   python-version: "3.10", os: "macos-latest" }
+        - { session: tests,   python-version: "3.7",  os: "windows-latest" }
+        - { session: tests,   python-version: "3.8",  os: "windows-latest" }
+        - { session: tests,   python-version: "3.9",  os: "windows-latest" }
+        - { session: tests,   python-version: "3.10", os: "windows-latest" }
         - { session: doctest, python-version: "3.10", os: "ubuntu-latest" }
         - { session: mypy,    python-version: "3.8",  os: "ubuntu-latest" }
 
