--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,8 @@ ci:
   autofix_prs: false
   autoupdate_schedule: weekly
   autoupdate_commit_msg: 'chore: pre-commit autoupdate'
+  skip:
+  - commitizen
 
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -66,3 +68,8 @@ repos:
             singer_sdk/helpers/_simpleeval.py|
             tests/core/test_simpleeval.py
         )$
+
+- repo: https://github.com/commitizen-tools/commitizen
+  rev: v2.28.0
+  hooks:
+  - id: commitizen
