--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,9 +58,16 @@ sphinx = {version = ">=4.5,<6.0", optional = true}
 sphinx-rtd-theme = {version = ">=0.5.2,<1.1.0", optional = true}
 sphinx-copybutton = {version = ">=0.3.1,<0.6.0", optional = true}
 myst-parser = {version = ">=0.17.2,<0.19.0", optional = true}
+sphinx-autobuild = {version = "^2021.3.14", optional = true}
 
 [tool.poetry.extras]
-docs = ["sphinx", "sphinx-rtd-theme", "sphinx-copybutton", "myst-parser"]
+docs = [
+    "sphinx",
+    "sphinx-rtd-theme",
+    "sphinx-copybutton",
+    "myst-parser",
+    "sphinx-autobuild",
+]
 
 [tool.poetry.dev-dependencies]
 # snowflake-connector-python = "2.0.4" # Removed: Too many version conflicts!
