--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,6 +109,7 @@ version_files = [
     "pyproject.toml:^version =",
     "cookiecutter/tap-template/{{cookiecutter.tap_id}}/pyproject.toml:singer-sdk",
     "cookiecutter/target-template/{{cookiecutter.target_id}}/pyproject.toml:singer-sdk",
+    ".github/ISSUE_TEMPLATE/bug.yml:^      placeholder:",
 ]
 
 [tool.commitizen.customize]
