--- a/.github/workflows/version_bump.yml
+++ b/.github/workflows/version_bump.yml
@@ -55,6 +55,7 @@ jobs:
         push: "false"
         changelog: "true"
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        extra_requirements: 'git+https://github.com/meltano/commitizen-version-bump@main'
         changelog_increment_filename: _changelog_fragment.md
 
     - name: Draft Release
