--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -67,7 +67,7 @@ repos:
         )$
 
 - repo: https://github.com/python-poetry/poetry
-  rev: 1.2.0b2
+  rev: 1.2.0
   hooks:
   - id: poetry-check
   - id: poetry-lock
