--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,7 @@ ci:
   autofix_prs: false
   autoupdate_schedule: weekly
   autoupdate_commit_msg: 'chore: pre-commit autoupdate'
+  skip: [poetry-lock]
 
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
