feat(taps): Implement reference paginators (#732)
* feat: Implement paginators

* docs: Add documentation for new implementation

* Update singer_sdk/pagination.py

* Update docs/porting.md

Co-authored-by: Aaron ("AJ") Steers <aj@meltano.com>

* Make linter happy

* Make pre-commit happy

* Use args and kwargs for base class

* Full coverage for new code

* Remove commented type var

Co-authored-by: Aaron ("AJ") Steers <aj@meltano.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,6 +147,7 @@ exclude_lines = [
     "raise NotImplementedError",
     "if __name__ == .__main__.:",
     '''class .*\bProtocol\):''',
+    '''@(abc\.)?abstractmethod''',
 ]
 fail_under = 82
 
