--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ PyJWT = "~=2.4"
 requests = "^2.25.1"
 cryptography = ">=3.4.6,<39.0.0"
 importlib-metadata = {version = "*", markers = "python_version < \"3.8\""}
+importlib-resources = {version = "^5.9.0", markers = "python_version < \"3.9\""}
 memoization = ">=0.3.2,<0.5.0"
 jsonpath-ng = "^1.5.3"
 joblib = "^1.0.1"
@@ -54,6 +55,7 @@ typing-extensions = "^4.2.0"
 simplejson = "^3.17.6"
 jsonschema = "^4.16.0"
 pytz = "^2022.2.1"
+PyYAML = "^6.0"
 
 # Sphinx dependencies installed as optional 'docs' extras
 # https://github.com/readthedocs/readthedocs.org/issues/4912#issuecomment-664002569
@@ -89,6 +91,7 @@ types-python-dateutil = "^2.8.19"
 types-pytz = "^2022.2.1.0"
 types-requests = "^2.28.11"
 types-simplejson = "^3.17.7"
+types-PyYAML = "^6.0.12"
 coverage = {extras = ["toml"], version = "^6.5"}
 
 # Cookiecutter tests
