--- a/cookiecutter/tap-template/{{cookiecutter.tap_id}}/pyproject.toml
+++ b/cookiecutter/tap-template/{{cookiecutter.tap_id}}/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "{{cookiecutter.tap_id}}"
 version = "0.0.1"
-description = "`{{cookiecutter.tap_id}}` is a Singer tap for {{cookiecutter.source_name}}, built with the Meltano SDK for Singer Taps."
+description = "`{{cookiecutter.tap_id}}` is a Singer tap for {{cookiecutter.source_name}}, built with the Meltano Singer SDK."
 authors = ["{{ cookiecutter.admin_name }}"]
 keywords = [
     "ELT",
