--- a/cookiecutter/target-template/{{cookiecutter.target_id}}/pyproject.toml
+++ b/cookiecutter/target-template/{{cookiecutter.target_id}}/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "{{cookiecutter.target_id}}"
 version = "0.0.1"
-description = "`{{cookiecutter.target_id}}` is a Singer target for {{cookiecutter.destination_name}}, built with the Meltano SDK for Singer Targets."
+description = "`{{cookiecutter.target_id}}` is a Singer target for {{cookiecutter.destination_name}}, built with the Meltano Singer SDK."
 authors = ["{{ cookiecutter.admin_name }}"]
 keywords = [
     "ELT",
