--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,9 @@ sphinx-copybutton = {version = ">=0.3.1,<0.6.0", optional = true}
 myst-parser = {version = ">=0.17.2,<0.19.0", optional = true}
 sphinx-autobuild = {version = "^2021.3.14", optional = true}
 
+# File storage dependencies installed as optional 'filesystem' extras
+fs-s3fs = { version = "^1.1.1", optional = true}
+
 [tool.poetry.extras]
 docs = [
     "sphinx",
@@ -75,6 +78,7 @@ docs = [
     "myst-parser",
     "sphinx-autobuild",
 ]
+s3fs = ["fs-s3fs"]
 
 [tool.poetry.dev-dependencies]
 # snowflake-connector-python = "2.0.4" # Removed: Too many version conflicts!
