--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,7 @@ ci:
   autofix_prs: false
   autoupdate_schedule: weekly
   autoupdate_commit_msg: 'chore: pre-commit autoupdate'
+  skip: [poetry-lock]
 
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -65,3 +66,10 @@ repos:
             singer_sdk/helpers/_simpleeval.py|
             tests/core/test_simpleeval.py
         )$
+
+- repo: https://github.com/python-poetry/poetry
+  rev: 1.2.2
+  hooks:
+  - id: poetry-check
+  - id: poetry-lock
+    args: [--no-update]
