add default envs to the cookie cutter meltano.yml

--- a/cookiecutter/tap-template/{{cookiecutter.tap_id}}/meltano.yml
+++ b/cookiecutter/tap-template/{{cookiecutter.tap_id}}/meltano.yml
@@ -1,6 +1,10 @@
 version: 1
 send_anonymous_usage_stats: true
 project_id: "{{cookiecutter.tap_id}}"
+environments:
+- name: dev
+- name: staging
+- name: prod
 plugins:
   extractors:
   - name: "{{cookiecutter.tap_id}}"
