only use test environment

--- a/cookiecutter/target-template/{{cookiecutter.target_id}}/meltano.yml
+++ b/cookiecutter/target-template/{{cookiecutter.target_id}}/meltano.yml
@@ -1,6 +1,9 @@
 version: 1
 send_anonymous_usage_stats: true
 project_id: "{{cookiecutter.target_id}}"
+default_environment: test
+environments:
+- name: test
 plugins:
   extractors: []
   loaders:
