--- a/cookiecutter/tap-template/{{cookiecutter.tap_id}}/meltano.yml
+++ b/cookiecutter/tap-template/{{cookiecutter.tap_id}}/meltano.yml
@@ -1,10 +1,9 @@
 version: 1
 send_anonymous_usage_stats: true
 project_id: "{{cookiecutter.tap_id}}"
+default_environment: test
 environments:
-- name: dev
-- name: staging
-- name: prod
+- name: test
 plugins:
   extractors:
   - name: "{{cookiecutter.tap_id}}"
