add more tap capabilities

--- a/cookiecutter/tap-template/{{cookiecutter.tap_id}}/meltano.yml
+++ b/cookiecutter/tap-template/{{cookiecutter.tap_id}}/meltano.yml
@@ -13,6 +13,8 @@ plugins:
     - state
     - catalog
     - discover
+    - about
+    - stream-maps
     config:
       start_date: '2010-01-01T00:00:00Z'
     settings:
