--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,11 @@ docs = [
     "myst-parser",
     "sphinx-autobuild",
 ]
+# Mark these as extras so that installs pass on python 3.11
+devextras = [
+    "pyarrow",
+    "viztracer",
+]
 
 [tool.poetry.dev-dependencies]
 # snowflake-connector-python = "2.0.4" # Removed: Too many version conflicts!
@@ -85,9 +90,9 @@ xdoctest = "^1.1.0"
 mypy = "^0.982"
 cookiecutter = "^2.1.1"
 PyYAML = "^6.0"
-pyarrow = "^9.0.0"
+pyarrow = {version = "^9.0.0", optional = true, python = "<3.11"}
 freezegun = "^1.2.2"
-viztracer = "^0.15.4"
+viztracer = {version = "^0.15.4", optional = true, python = "<3.11"}
 requests-mock = "^1.10.0"
 sqlalchemy2-stubs = {version = "^0.0.2a29", allow-prereleases = true}
 types-python-dateutil = "^2.8.19"
