feat: Support `patternProperties`

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,7 +20,13 @@ repos:
             cookiecutter/.*/meltano.yml
         )$
   - id: end-of-file-fixer
-    exclude: (cookiecutter/.*|docs/.*|samples/.*\.json)
+    exclude: |
+      (?x)^(
+        cookiecutter/.*|
+        docs/.*|
+        samples/.*\.json|
+        tests/snapshots/.*/.*\.json
+      )$
   - id: trailing-whitespace
     exclude: |
         (?x)^(
