--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,9 @@ sphinx-copybutton = {version = ">=0.3.1,<0.6.0", optional = true}
 myst-parser = {version = ">=0.17.2,<0.19.0", optional = true}
 sphinx-autobuild = {version = "^2021.3.14", optional = true}
 
+# File storage dependencies installed as optional 'filesystem' extras
+fs-s3fs = { version = "^1.1.1", optional = true}
+
 [tool.poetry.extras]
 docs = [
     "sphinx",
@@ -76,6 +79,7 @@ docs = [
     "myst-parser",
     "sphinx-autobuild",
 ]
+s3 = ["fs-s3fs"]
 # Mark these as extras so that installs pass on python 3.11
 samples = [
     "pyarrow",
