--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ sphinx-rtd-theme = {version = ">=0.5.2,<1.2.0", optional = true}
 sphinx-copybutton = {version = ">=0.3.1,<0.6.0", optional = true}
 myst-parser = {version = ">=0.17.2,<0.19.0", optional = true}
 sphinx-autobuild = {version = "^2021.3.14", optional = true}
+fastjsonschema = "^2.16.2"
 
 [tool.poetry.extras]
 docs = [
