--- a/samples/sample_tap_gitlab/schemas/releases.json
+++ b/samples/sample_tap_gitlab/schemas/releases.json
@@ -11,7 +11,7 @@
       "type": ["string", "null"]
     },
     "project_id": {
-      "type": "integer"
+      "type": "string"
     },
     "description": {
       "type": ["null", "string"]
