--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,6 @@ python-dotenv = ">=0.20,<0.22"
 typing-extensions = "^4.2.0"
 simplejson = "^3.17.6"
 jsonschema = "^4.16.0"
-pyarrow = {version = "^10.0.1", optional = true}
 pytz = "^2022.2.1"
 PyYAML = "^6.0"
 
@@ -97,6 +96,7 @@ xdoctest = "^1.1.0"
 mypy = "^0.991"
 cookiecutter = "^2.1.1"
 PyYAML = "^6.0"
+pyarrow = {version = "^10.0.1", optional = true, python = "<3.11"}
 freezegun = "^1.2.2"
 viztracer = {version = "^0.15.6", optional = true, python = "<3.11"}
 requests-mock = "^1.10.0"
