--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ python-dotenv = ">=0.20,<0.22"
 typing-extensions = "^4.2.0"
 simplejson = "^3.17.6"
 jsonschema = "^4.16.0"
+pytest = "^7.2.0"
 pytz = "^2022.2.1"
 PyYAML = "^6.0"
 
