--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ sphinx-autobuild = {version = "^2021.3.14", optional = true}
 
 # File storage dependencies installed as optional 'filesystem' extras
 fs-s3fs = { version = "^1.1.1", optional = true}
+pyarrow = {version = "^10.0.1", optional = true}
 
 [tool.poetry.extras]
 docs = [
