--- a/singer_sdk/default_logging.yml
+++ b/singer_sdk/default_logging.yml
@@ -2,7 +2,7 @@ version: 1
 disable_existing_loggers: false
 formatters:
   console:
-    format: "{asctime} {message}"
+    format: "{asctime} {levelname} {name} {message}"
     style: "{"
 handlers:
   default:
