--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ python-dotenv = ">=0.20,<0.22"
 typing-extensions = "^4.2.0"
 simplejson = "^3.17.6"
 jsonschema = "^4.16.0"
+pyarrow = "^10.0.1"
 pytz = "^2022.2.1"
 PyYAML = "^6.0"
 
@@ -70,7 +71,6 @@ sphinx-autobuild = {version = "^2021.3.14", optional = true}
 
 # File storage dependencies installed as optional 'filesystem' extras
 fs-s3fs = { version = "^1.1.1", optional = true}
-pyarrow = {version = "^10.0.1", optional = true}
 
 [tool.poetry.extras]
 docs = [
@@ -82,9 +82,6 @@ docs = [
 ]
 s3 = ["fs-s3fs"]
 # Mark these as extras so that installs pass on python 3.11
-samples = [
-    "pyarrow",
-]
 debugging = [
     "viztracer",
 ]
@@ -97,7 +94,6 @@ xdoctest = "^1.1.0"
 mypy = "^0.991"
 cookiecutter = "^2.1.1"
 PyYAML = "^6.0"
-pyarrow = {version = "^10.0.1", optional = true, python = "<3.11"}
 freezegun = "^1.2.2"
 viztracer = {version = "^0.15.6", optional = true, python = "<3.11"}
 requests-mock = "^1.10.0"
