--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,10 @@ jsonschema = "^4.16.0"
 pyarrow = "^10.0.1"
 pytz = "^2022.2.1"
 PyYAML = "^6.0"
+numpy = [
+    {version = "^1.23.5", python = ">=3.8"},
+    {version = "^1.21.1", python = "<3.8"}
+]
 
 # Sphinx dependencies installed as optional 'docs' extras
 # https://github.com/readthedocs/readthedocs.org/issues/4912#issuecomment-664002569
