--- a/cookiecutter/target-template/{{cookiecutter.target_id}}/pyproject.toml
+++ b/cookiecutter/target-template/{{cookiecutter.target_id}}/pyproject.toml
@@ -3,7 +3,7 @@
 name = "{{cookiecutter.variant}}-{{cookiecutter.target_id}}"
 {% else %}
 name = "{{cookiecutter.target_id}}"
-{%  %}
+{% endif %}
 version = "0.0.1"
 description = "`{{cookiecutter.target_id}}` is a Singer target for {{cookiecutter.destination_name}}, built with the Meltano Singer SDK."
 readme = "README.md"
