fix: Add level and logger name to default log format (#1233)

--- a/singer_sdk/default_logging.yml
+++ b/singer_sdk/default_logging.yml
@@ -2,7 +2,7 @@ version: 1
 disable_existing_loggers: false
 formatters:
   console:
-    format: "{asctime} {message}"
+    format: "{asctime:23s} | {levelname:8s} | {name:20s} | {message}"
     style: "{"
 handlers:
   default:
@@ -11,5 +11,4 @@ handlers:
     stream: ext://sys.stderr
 root:
   level: INFO
-  propagate: true
   handlers: [default]
